--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,5 +33,5 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/my-app:latest
           build-args: |
-            API_KEY=${{ secrets.API_KEY }}
-            ANOTHER_KEY=${{ secrets.ANOTHER_KEY }}
+            GROQ_API_KEY=${{ secrets.GROQ_API_KEY }}
+            REDIS_URL =${{ secrets.REDIS_URL }}
