--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           context: .  # Path to the Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/my-app:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/medbackend:latest
           build-args: |
             GROQ_API_KEY=${{ secrets.GROQ_API_KEY }}
             REDIS_URL =${{ secrets.REDIS_URL }}
