--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,9 @@ groq==0.4.1
 cachetools==5.3.2
 python-dotenv==1.0.0
 httpx==0.25.2
-
+unstructured[image]
+PyPDF2
+Pillow
 # Simple authentication dependencies
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
